<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="com.example.android.popularmovies.MovieListActivity">

	<android.support.v7.widget.RecyclerView
		android:id="@+id/rv_movies"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
	    android:layout_gravity="top"
		/>


	<LinearLayout android:orientation="vertical"
		android:id="@+id/ll_no_api_key"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_gravity="center|fill_vertical"
		android:visibility="invisible">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/error_no_api_key_1"
			android:padding="16dp"
			android:layout_gravity="center"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/error_no_api_key_2"
			android:padding="16dp"
			android:layout_gravity="center"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/error_no_api_key_3"
			android:padding="16dp"
			android:layout_gravity="center"/>

	</LinearLayout>

	<TextView
		android:id="@+id/tv_movie_list_network_problem"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/error_network_problem"
		android:textSize="24sp"
		android:visibility="invisible"
		android:padding="16dp"
		/>

	<ProgressBar
		android:id="@+id/pb_movie_list"
		android:layout_height="42dp"
		android:layout_width="42dp"
		android:layout_gravity="center"
		android:visibility="invisible" />

</FrameLayout>
